--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./layout/main-faq";
 @import "./layout/main-futurix";
 @import "./layout/sedes";
+@import "./layout/main-error-404";
 @import "./layout/media/query-768";
 @import "./layout/media/query-425";
 @import "./layout/media/query-320";
