--- a/scss/layout/media/_query-425.scss
+++ b/scss/layout/media/_query-425.scss
@@ -268,7 +268,7 @@
     .mainFuturix{
         height: 20rem;
         .futurixTitle{
-            margin: 0%;
+            margin: auto;
             width: 27%;
             font-size: 1rem;
             h1{
@@ -292,6 +292,45 @@
                 p{
                     font-size: .8rem;
                 }
+            }
+        }
+    }
+    .futurixArticle2{
+        p{
+            width: 80%;
+            font-size: .8rem;
+        }
+        a{
+            font-size: .9rem;
+        }
+    }
+    .m-404{
+        .main-404{
+            height: 50%;
+            background-image: radial-gradient(circle, #3f4448, #383d41, #31363a, #2b3034, #24292d, #202529, #1c2124, #181d20, #161a1d, #14181a, #111517, #0e1214);
+            h1{
+                font-size: 2rem;
+            }
+            div{
+                &:hover::after{
+                    font-size: .8rem;
+                }
+                a{
+                    font-size: 1rem;
+                }
+            }
+        }
+        .sec2{
+            flex-direction: column;
+            h2{
+                text-align: center;
+                font-size: 3rem;
+                padding: 0;
+            }
+            p{
+                text-align: center;
+                padding: 0;
+                font-size: .8rem;
             }
         }
     }
